discovery server url added

--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.username=root
 spring.datasource.password=Venky123
 spring.jpa.hibernate.ddl-auto=update
+eureka.client.service-url.defaultZone=http://localhost:7777/eureka
